Отправка на ревью2

--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -7,7 +7,7 @@
 {% block content %}
   {% cache 20 index_page, page_obj %}
   <h1>Последние обновления на сайте</h1>
-  {% include 'posts/includes/switcher.html' %}
+  {% include 'posts/includes/switcher.html' with index=True %}
   {% for post in page_obj %}
     <ul>
       <li>
