--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -41,7 +41,7 @@
           <img class="card-img my-2" src="{{ im.url }}">
       {% endthumbnail %}
       <p>{{ post.text|linebreaksbr }}</p>
-      {% include 'posts/add_comment.html' %}
+      {% include 'posts/includes/add_comment.html' %}
     </article>
   </div>
 {% endblock %}
