--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -4,6 +4,7 @@
   Посты избранных авторов
 {% endblock %}
 {% block content %}
+<h1>Посты избранных авторов</h1>
   {% include 'posts/includes/switcher.html' with follow=True %}
   {% for post in page_obj %}
     <ul>
