--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -3,8 +3,7 @@
 {% block content %}
   <h1>Привет, я автор</h1>
   <p>
-    Тут я размещу информацию о себе,
-    когда у меня появится время и я выучу HTML и SCC
+    Я не волшебник, а еще только учусь !)
   </p>
 {% endblock %}
 
