--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -25,7 +25,12 @@
     и 75% при размерах экрана ≥768px
     {% endcomment %}
     <article class="col-12 col-md-9">
-      <p>Текст страницы "Технологии"</p>
+      <p>Создание веб-приложения с нуля</p>
+      <p>Роутинг запросов в приложении, проектирование структуры адресов</p>
+      <p>Основы HTML, CSS. Bootstrap (фреймворк для фронтенда)</p>
+      <p>HTML страницы в Django: render, include, block, extends, cловарь контекста, ветвления, циклы</p>
+      <p>Django ORM</p>
+      <p>Тестирование: Unittest и TDD, Unittest в Django</p>
     </article>
   </div>
 {% endblock %}
