--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -11,7 +11,11 @@
   {% for post in page_obj %}
     <ul>
       <li>
-        Автор: {{ post.author.get_full_name }}
+        {% if  post.author.get_full_name %}
+        <a href="{% url 'posts:profile' post.author.username %}">
+                Автор: {{ post.author.get_full_name }}
+        {% endif %}
+        </a>
       </li>
       <li>
         Дата публикации: {{ post.pub_date|date:"d E Y" }}
@@ -21,14 +25,12 @@
         <img class="card-img my-2" src="{{ im.url }}">
     {% endthumbnail %}
     <p>{{ post.text|linebreaksbr }}</p>
-    <a href="{% url 'posts:post_detail' post.id %}">подробнее...</a><br>
+    <a href="{% url 'posts:post_detail' post.id %}">Подробнее...</a><br>
     {% if request.user == post.author %}
-      <a href="{% url 'posts:post_edit' post.id %}">редактировать</a><br>
+      <a href="{% url 'posts:post_edit' post.id %}">Редактировать</a><br>
     {% endif %}
-    {% if not post.group %}
-      <u>этот пост без группы</u>
-    {% else %}
-      <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы <strong>"{{ post.group }}"</strong></a>
+    {% if post.group %}
+      <a href="{% url 'posts:group_list' post.group.slug %}">Все записи группы <strong>"{{ post.group }}"</strong></a>
     {% endif %}
     {% if not forloop.last %}<hr>{% endif %}
   {% endfor %}
