--- a/yatube/templates/users/password_reset_confirm.html
+++ b/yatube/templates/users/password_reset_confirm.html
@@ -10,7 +10,7 @@
             Введите новый пароль
           </div>
           <div class="card-body">
-            <form method="post" action="{% url 'users:password_reset_complete' %}">
+            <form method="post" action="">
 <!--              <input type="hidden" name="csrfmiddlewaretoken" value="">-->
               {% csrf_token %}
               <div class="form-group row my-3 p-3">
