--- a/yatube/templates/users/password_reset_form.html
+++ b/yatube/templates/users/password_reset_form.html
@@ -9,7 +9,7 @@
             Чтобы сбросить старый пароль — введите адрес электронной почты, под которым вы регистрировались
           </div>
           <div class="card-body">
-            <form method="post"">
+            <form method="post">
 <!--              <input type="hidden" name="csrfmiddlewaretoken" value="">-->
               {% csrf_token %}
               <div class="form-group row my-3 p-3">
