--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -34,6 +34,9 @@
             <a href="{% url 'posts:post_edit' post.id %}">редактировать</a><br>
           </li>
         {% endif %}
+        <li class="list-group-item">
+          <a href="{% url 'posts:post_share' post.id %}">поделиться этим постом</a>
+        </li>
       </ul>
     </aside>
     <article class="col-12 col-md-9">
