--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -6,8 +6,20 @@
 {% block content %}
   <h1>Последние обновления на сайте</h1>
   {% include 'posts/includes/switcher.html' with index=True %}
+  {% if tag %}
+    <h2>Посты с тегами: "{{ tag.name }}"</h2>
+  {% endif %}
   {% for post in page_obj %}
     <ul>
+      <p class="tags">
+        Теги:
+          {% for tag in post.tags.all %}
+            <a href="{% url "posts:post_list_by_tag" tag.slug %}">
+            {{ tag.name }}
+            </a>
+            {%  if not forloop.last %}, {% endif %}
+          {% endfor %}
+      </p>
       <li>
         {% if  post.author.get_full_name %}
         <a href="{% url 'posts:profile' post.author.username %}">
